started over with html and css from scratch and fixed layout issues, fixed scripts.js display to page

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,15 @@ body {
 #outer-wraper {
   min-height: 100vh;
 }
-* {
-  border: mistyrose 1px solid;
+a {
+  text-decoration: none;
+  color: black;
 }
+a:hover {
+  text-decoration: none;
+  color: black;
+}
+
+/** {
+  border: mistyrose 1px solid;
+}*/
